--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 This folder is used as the backup of my script on processing the hst image data.
+
+Description of folders:
+img: some simple tools dealing with images
+iso: obtain the isophote using ellipse in pyraf and draw the 1D profile.
+msk: mask the uninteresting sources to obtain the sky or the target sources.
+sky: measure the sky using Zhaoyu's method.
