Add the folder: others

--- a/README
+++ b/README
@@ -5,3 +5,4 @@ img: some simple tools dealing with images
 iso: obtain the isophote using ellipse in pyraf and draw the 1D profile.
 msk: mask the uninteresting sources to obtain the sky or the target sources.
 sky: measure the sky using Zhaoyu's method.
+others: other scripts that maybe useful.
